--- a/style.css
+++ b/style.css
@@ -27,13 +27,19 @@
   display: flex; /* Arrange cards horizontally */
   flex-wrap: wrap; /* Allow cards to wrap to the next line */
   justify-content: space-between; /* Distribute cards evenly */
+  margin: 0 auto;
   /* Optional styling for card container (e.g., border, padding) */
 }
 
-body {
+html body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background: #ffffff;
+  /*correção abaixo*/
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -50,7 +56,10 @@ a:focus {
   position: relative;
   padding-top: 45px;
   background: #043668;
-  margin-top: 40%;
+  margin-top: 0%;
+    /*correção abaixo   padding: 20px;/*traforma o retangulo do rodapé com bordas deixar */
+  text-align: center;
+  width: 100%;
 }
 
 .footer .footer-blog,
@@ -309,7 +318,7 @@ a:focus {
   border-right: none;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 500px) {
   .footer .copyright .copy-text,
   .footer .copyright .copy-menu {
     text-align: center;
